# software-as-a-graph

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.all-in-one  Dockerfile.api  README.md  analyze_graph.py  api.py  benchmark.py  dashboard.html  demo_refactored.py  docker-compose.yml  e2e_pipeline.py  enhanced_graph_analyzer.py  example_simulate_graph.py  example_visualize_graph.py  export_graph.py  generate_graph.py  generate_openapi.py  graph_based_methodology.ipynb  import_graph.py  integrated_generate_graph.py  middleware2026.md  multi_layer_analyzer.py  node_model_full_keys.txt  pubsub_criticality_analyzer.py  pyproject.toml  pytest.ini  quality_assessment.py  requirements.txt  run.py  run.sh  run_tests.py  simulate_graph.py  spof_demo.py  test_dashboard.html  test_medium_scale_debug.py  (+3 more)
api/: Dockerfile  (+5 more)
backend/: Dockerfile  openapi.json  pyproject.toml  requirements.txt
backend/api/: bottleneck_fast.py  dependencies.py  main.py  models.py  statistics.py
backend/api/presenters/: analysis_presenter.py  graph_presenter.py  simulation_presenter.py  statistics_presenter.py
backend/api/routers/: analysis.py  classification.py  components.py  graph.py  health.py  prediction.py  simulation.py  statistics.py  traffic.py  validation.py
backend/scratch/: verify_stats.py
backend/src/adapters/: __init__.py  neo4j_repo.py
backend/src/analysis/: __init__.py  analyzer.py  antipattern_detector.py  classifier.py  models.py  problem_detector.py  quality_analyzer.py  service.py  smells.py  statistics.py  statistics_service.py  structural_analyzer.py  weight_calculator.py
backend/src/application/: __init__.py
backend/src/benchmark/: __init__.py  models.py  reporting.py  runner.py
backend/src/cli/: console.py  dispatcher.py
backend/src/core/: __init__.py  file_exporter.py  graph_exporter.py  graph_generator.py  graph_importer.py  interfaces.py  layers.py  memory_repo.py  metrics.py  models.py  neo4j_repo.py
backend/src/domain/: __init__.py
backend/src/explanation/: cli.py  engine.py  templates.py
backend/src/generation/: __init__.py  datasets.py  generator.py  models.py  service.py
backend/src/gnn/: __init__.py  data_preparation.py  gnn_service.py  models.py  trainer.py
backend/tests/: conftest.py  test_ahp_shrinkage.py  test_analysis_service.py  test_antipattern_detector.py  test_api_analysis.py  test_api_graph.py  test_api_layers.py  test_api_simulation.py  test_api_statistics.py  test_api_stats_refactor.py  test_availability_decoupling.py  test_availability_dimension.py  test_availability_orthogonality.py  test_benchmark.py  test_benchmark_service.py  test_cli.py  test_cli_formatter.py  test_cli_smoke.py  test_cli_smoke_extended.py  test_code_quality_attributes.py  test_code_quality_hardening.py  test_composite_quality.py  test_coupling_risk_hardening.py  test_default_weights.py  test_domain.py  test_domain_model.py  test_explanation_engine.py  test_failure_modes.py  test_flow_disruption.py  test_generation_service.py  test_gnn_code_quality_features.py  test_gnn_correctness.py  test_gnn_evaluation.py  test_gnn_methodology.py  test_impact_sensitivity.py  test_independence_guarantee.py  test_library_cascade.py  test_library_code_quality_attributes.py  test_maintainability_dimension.py  test_memory_repo.py  (+19 more)
(+1188 files in other folders)
