[project]
name = "saag"
version = "1.0.0"
description = "Predicts critical components in distributed publish-subscribe systems using graph topology"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

# Core: graph analysis & scoring — no database, no HTTP server
dependencies = [
    "networkx>=3.4",
    "numpy>=2.1",
    "scipy>=1.15",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "pydantic>=2.10",
]

[project.optional-dependencies]
neo4j = ["neo4j==5.25.0"]
gnn   = [
    "torch==2.5.0",
    "torch-geometric==2.7.0",
    "torch-scatter==2.1.2",
    "torch-sparse==0.6.18",
]
api   = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
]
dev   = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["saag[neo4j,gnn,api]"]

[project.scripts]
saag            = "cli.run:main"
saag-analyze    = "cli.analyze_graph:main"
saag-simulate   = "cli.simulate_graph:main"
saag-validate   = "cli.validate_graph:main"
saag-visualize  = "cli.visualize_graph:main"
saag-predict    = "cli.predict_graph:main"
saag-import     = "cli.import_graph:main"
saag-generate   = "cli.generate_graph:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["saag*", "api*", "tools*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Add repo root to Python path so saag is findable regardless of which Python env pytest runs in
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (skip with --quick)",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
timeout = 120

[tool.ruff]
target-version = "py39"
line-length = 120
